--- a/config/locales/views/profiles/en.yml
+++ b/config/locales/views/profiles/en.yml
@@ -11,6 +11,9 @@ en:
         bookings_count: Total number of bookings
         last_activity: Last Activity
         last_login_location: Last login Location
+        number_of_followed_users: Followed by %{user}
+        number_of_followers: Followers of %{user}
+        number_of_network: people in this %{user}'s network
         overview: Overview
         trip_canceled_count: Number of canceled trips
         trips_count: Total registered trips
