create email for comment notification to commenters when post owner write a comment

--- a/config/locales/mailers/notification_mailer/fa.yml
+++ b/config/locales/mailers/notification_mailer/fa.yml
@@ -3,3 +3,7 @@ fa:
     comment_notification_to_shout_owner:
       subject: '%{commenter} در زیر پست شما کامنتی گذاشته است:'
       see_post: مشاهده پست
+    comment_notification_to_shout_commenters:
+      subject: '%{owner} به کامنت شما جواب داده است:'
+      see_post: مشاهده پست
+      
