--- a/config/locales/general/en.yml
+++ b/config/locales/general/en.yml
@@ -50,6 +50,7 @@ en:
   accept: Accept 
   reject: Reject
   post: Post
+  comment: Comment
   sending: Sending...
   error_registration: Registreation failed! 
   # flash messages
