--- a/config/locales/general/fa.yml
+++ b/config/locales/general/fa.yml
@@ -12,6 +12,7 @@ fa:
   tel: تلفن
   mobile: موبایل
   email: پست الکترونیکی
+  website: وب سایت اینترنتی
   password: رمز عبور
   number_of_requested_seats: تعداد صندلی های درخواست شده
   gender:
