--- a/config/locales/views/navigations/en.yml
+++ b/config/locales/views/navigations/en.yml
@@ -12,9 +12,10 @@ en:
         registered_trips: Inserted Trips
         as_passenger: As Passenger 
         as_driver: As Driver
+      my_pages:
+        personal_page: Personal Page
     popup_signin:
       sign_in_with_facebook: Sign in with Facebook
-
   navbar:
     profile:
       title: Profile
