--- a/config/locales/views/navigations/fa.yml
+++ b/config/locales/views/navigations/fa.yml
@@ -13,9 +13,11 @@ fa:
         registered_trips: سقرهای ثبت کرده
         as_passenger: با عنوان مسافر
         as_driver:  با عنوان راننده
+      my_pages:
+        personal_page: صفحه شخصی
+
     popup_signin:
       sign_in_with_facebook: ورود با حساب کاربری فیسبوک
-
   navbar:
     profile:
       title: پروفایل
