add name of user in my page menu

--- a/config/locales/views/navigations/en.yml
+++ b/config/locales/views/navigations/en.yml
@@ -13,7 +13,7 @@ en:
         as_passenger: As Passenger 
         as_driver: As Driver
       my_pages:
-        personal_page: Personal Page
+        personal_page: "%{user}'s Personal Page"
     popup_signin:
       sign_in_with_facebook: Sign in with Facebook
   navbar:
