--- a/config/locales/views/branches/fa.yml
+++ b/config/locales/views/branches/fa.yml
@@ -2,7 +2,8 @@ fa:
   branches:
     show:
       branch_overview:
-        overview: "  %{company_name} %{branch}  %{branch_name}  در یک نگاه"
+        overview: '  %{company_name} %{branch}  %{branch_name}  در یک نگاه'
       single_branch:
         about_branch: اطلاعات شعبه
         branch_manager: مدیر شعبه
+        company_director: مدیر شرکت
