--- a/config/locales/views/trips/en.yml
+++ b/config/locales/views/trips/en.yml
@@ -17,12 +17,18 @@ en:
       branch_name: Branch's name
       driver_name: 'Driver''s Name:'
       please_select_driver: 'Please select the driver:'
+    select_period:
+      next: Next
+      one_time_trip: One Time Trip
+      periodic_trips: Periodic trips
+      start_day_msg: 'Start date will be computed according to the date of first trip '
     shared:
       head:
         price: Select Prices
         register_trip_info: Register Trip
         select_date_format: 'Select Date Format '
         select_driver: Driver Select
+        select_period: Select Period
         succecful_submit: Submit Complete
     show_edit:
       form_edit:
