--- a/config/locales/views/subtrips/en.yml
+++ b/config/locales/views/subtrips/en.yml
@@ -1,5 +1,15 @@
 en:
   subtrips:
+    edit:
+      deleting_seats_message: 'Please select your desired seats from free seat''s
+        list below and then press Delete Seats.
+
+        '
+    form:
+      back_to_trip: Back to Trip
+      delete_seats: Delete seats
+      seat_number: Seat number
+      select: Select
     show:
       branch_overview:
         branch_name: Name of Branch
@@ -25,6 +35,7 @@ en:
         seats_status: Seats Status
       subtrip_overview:
         book_trip: Book this trip
+        edit_trip: Eliminate seats
         only_bookable_via_tel: Only bookable via phone
     subtrip_search_raw:
       from: from
