improve date in search subtrip form for adapting it with english language

--- a/config/locales/views/search_subtrips/en.yml
+++ b/config/locales/views/search_subtrips/en.yml
@@ -15,12 +15,18 @@ en:
           selector: Select Mode
       search_btn: Search
     no_record_found:
+      cycle: 'and cities around '
+      from: from
+      kilo: kilometer radius of it
       line1: '1'
       line2: '2'
       line3: '3'
       line4: '4'
       line5: '5'
       message1: no trip from %{origin} founded
+      no_trip: There is no trip
+      not_founded: .
+      to: to
     search:
       comming_soon: Comming Soon.
       no_trip_registered: No record with this condition. please try again.
