create contact us page and admin mailer to send email of contact us form

--- a/config/locales/general/en.yml
+++ b/config/locales/general/en.yml
@@ -55,6 +55,7 @@ en:
   reject: Reject
   post: Post
   comment: Comment
+  send: Send
   sending: Sending...
   error_registration: Registreation failed! 
   # flash messages
