add explaination to contact us and account request for companies

--- a/config/locales/views/application/en.yml
+++ b/config/locales/views/application/en.yml
@@ -25,6 +25,7 @@ en:
       how_it_works_for_companies: 'How it works: for companies'
       how_it_works_for_drivers: 'How it works: for drivers'
       how_it_works_for_passengers: 'How it works: for passengers'
+      ladies_only: Ladies only trips
       legal: Legal
       metting: Meeting
       privacy: Privacy
