--- a/config/locales/views/application/fa.yml
+++ b/config/locales/views/application/fa.yml
@@ -25,6 +25,7 @@ fa:
       how_it_works_for_companies: نحوه کار برای شرکتها
       how_it_works_for_drivers: نحوه کار برای راننده ها
       how_it_works_for_passengers: نحوه کار برای مسافران
+      ladies_only: سفرهای ویژه بانوان
       legal: قوانین
       metting: قرار ملاقات
       privacy: حقوق مالکيت معنوي
