--- a/config/locales/views/devise/en.yml
+++ b/config/locales/views/devise/en.yml
@@ -9,5 +9,5 @@ en:
         remember_me: 'Remember me'
         submit: 'Sign In'
         sign_in: Sign In
-        sign_up: 'Sign Up'
+        sign_up: Sign up for new members
         forget_password: 'Forget Password'
