--- a/config/locales/views/devise/fa.yml
+++ b/config/locales/views/devise/fa.yml
@@ -9,5 +9,5 @@ fa:
         remember_me: 'مرا به خاطر بسپار' 
         submit: 'ورود'
         sign_in: ورود               
-        sign_up: 'ثبت نام'
+        sign_up: ثبت نام اعضای جدید
         forget_password: 'فراموشی رمز عبور'        
