--- a/config/locales/views/pages/fa.yml
+++ b/config/locales/views/pages/fa.yml
@@ -6,6 +6,13 @@ fa:
       branch_tel: تلفن شعبه
       company_name: نام شرکت
       detail: اطلاعات اضافی
+      line1: شرکتهای مسافربری می توانند با درخواست حساب کاربری ویژه، همه سفرهای اتوبوسها
+        یا سواریهای بین شهری خود را با این حساب کاربری ویژه به صورت متمرکز کنترل کنند. متصدی شعبه می تواند برای تمام اتوبوس یا سواریها، سفرها را وارد کند و
+        همچنین راننده ها را وارد حساب کاربری شعبه نماید و یا حذف کند و تمام امتیازاتی
+        که مسافران به راننده ها می دهند را مشاهده کند.
+      line2: متصدی یا مسوول شعبه می تواند با پر کردن فرم زیر درخواست حساب کاربری ویژه نماید.
+        تیم پشتیبانی همسفریاب بعد از بررسی اطلاعات وارد شده، حساب کاربری را فعال نموده
+        و ایمیلی که شامل مشخصات حساب کاربری می باشد را به ایمیل متصدی ارسال کند.
       operator_email: ایمیل متصدی
       operator_mobile: موبایل متصدی
       placeholder_branch_name: نام شعبه شرکت مسافربری
@@ -16,12 +23,18 @@ fa:
         دریافت ایمیل هنگام رزرو بلیط
       placeholder_operator_mobile: شماره موبایل متصدی شعبه برای دریاف اس ام اس اتوماتیک
         در هنگام رزرو بلیط توسط مسافران
+      title: درخواست حساب کاربری برای شعبه های شرکتهای مسافربری
+    company_account_request_accept:
+      company_account_request_sent: درخواست شما با موفقیت ارسال شد. در چند روز آینده
+        ایمیلی از طرف همسفریاب برای درخواستتان دریافت خواهید نمود.
     contact:
+      contact us: تماس با ما
+      line1: هر گونه پیشنهاد، سوال یا مشکلی در مورد سایت همسفریاب داشته باشید، میتوانید
+        از طریق این فرم با ما در تماس باشد. تیم پشتیبانی در عرض ۲۴ ساعت به پیغام شما
+        پاسخ خواهد داد.
       message: پیام
       subject: موضوع
       your_email: آدرس الکترونیکی
       your_name: 'نام کامل '
     contact_accept:
       contact_us_sent: پیام شما با موفقیت ارسال شد.
-    company_account_request_accept: 
-      company_account_request_sent: درخواست شما با موفقیت ارسال شد. در چند روز آینده ایمیلی از طرف همسفریاب برای درخواستتان دریافت خواهید نمود.
