--- a/config/locales/views/pages/fa.yml
+++ b/config/locales/views/pages/fa.yml
@@ -1,7 +1,7 @@
 fa:
   pages:
     company_account_request:
-      branch_address: آدرش شعبه
+      branch_address: آدرس شعبه
       branch_name: نام شعبه
       branch_tel: تلفن شعبه
       company_name: نام شرکت
