--- a/config/locales/mailers/notification_mailer/fa.yml
+++ b/config/locales/mailers/notification_mailer/fa.yml
@@ -6,4 +6,6 @@ fa:
     comment_notification_to_shout_commenters:
       subject: '%{owner} به کامنت شما جواب داده است:'
       see_post: مشاهده پست
-      
+    message_notification:
+      subject: '%{sender} پیامی برای شما ارسال کرده است:'
+      see_message: مشاهده پیام
