--- a/config/locales/views/users/en.yml
+++ b/config/locales/views/users/en.yml
@@ -4,11 +4,15 @@ en:
     contact_details: Contact Details
     edit:
       account_settings:
+        Current Password: Current Password
+        Password Confirmation: Password Confirmation
         new_password: New Password
       contact_details:
         city_placeholder: Enter your city name.
         mobile_placeholder: Enter your cellphone number
       page_url:
+        Enter your desired url: Enter your desired url
+        Profile Url: Profile Url
         change_url_message: 'Caution: You can change your profile url only one time'
         your_url_is: 'Your url is:'
       personal_profile:
