--- a/config/locales/general/en.yml
+++ b/config/locales/general/en.yml
@@ -9,9 +9,14 @@ en:
   name_of_passenger: "Passenger's Name"
   name_of_driver: "Driver's Name"
   contact_number: Contact Number
+  firstname: First Name
+  lastname: Last Name
+  age: Age
+
   tel: Telephone
   mobile: Cell Phone
   email: Email
+  address: Address
   website: Website
   password: Password
   number_of_requested_seats: Number of requested seats
