--- a/config/locales/views/pages/fa.yml
+++ b/config/locales/views/pages/fa.yml
@@ -7,22 +7,24 @@ fa:
       company_name: نام شرکت
       detail: اطلاعات اضافی
       line1: شرکتهای مسافربری می توانند با درخواست حساب کاربری ویژه، همه سفرهای اتوبوسها
-        یا سواریهای بین شهری خود را با این حساب کاربری ویژه به صورت متمرکز کنترل کنند. متصدی شعبه می تواند برای تمام اتوبوس یا سواریها، سفرها را وارد کند و
-        همچنین راننده ها را وارد حساب کاربری شعبه نماید و یا حذف کند و تمام امتیازاتی
-        که مسافران به راننده ها می دهند را مشاهده کند.
-      line2: متصدی یا مسوول شعبه می تواند با پر کردن فرم زیر درخواست حساب کاربری ویژه نماید.
-        تیم پشتیبانی همسفریاب بعد از بررسی اطلاعات وارد شده، حساب کاربری را فعال نموده
-        و ایمیلی که شامل مشخصات حساب کاربری می باشد را به ایمیل متصدی ارسال کند.
+        یا سواریهای بین شهری خود را با این حساب کاربری ویژه به صورت متمرکز کنترل کنند.
+        متصدی شعبه می تواند برای تمام اتوبوس یا سواریها، سفرها را وارد کند و همچنین
+        راننده ها را وارد حساب کاربری شعبه نماید و یا حذف کند و تمام امتیازاتی که
+        مسافران به راننده ها می دهند را مشاهده کند.
+      line2: متصدی یا مسوول شعبه می تواند با پر کردن فرم زیر درخواست حساب کاربری ویژه
+        نماید. تیم پشتیبانی همسفریاب بعد از بررسی اطلاعات وارد شده، حساب کاربری را
+        فعال نموده و ایمیلی که شامل مشخصات حساب کاربری می باشد را به ایمیل متصدی ارسال
+        کند.
       operator_email: ایمیل متصدی
       operator_mobile: موبایل متصدی
       placeholder_branch_name: نام شعبه شرکت مسافربری
-      placeholder_branch_tel: شماره تماس شعبه برای رزرو بلیط
+      placeholder_branch_tel: شماره تماس شعبه برای رزرو بلیت
       placeholder_company_name: نام شرکت مسافربری
       placeholder_detail: اطلاعات اضافی مانند امکانات شعبه برای قرار دادن در صفحه  شعبه
       placeholder_operator_email: ایمیل متصدی برای ایجاد حساب کاربری در همسفریاب و
-        دریافت ایمیل هنگام رزرو بلیط
+        دریافت ایمیل هنگام رزرو بلیت
       placeholder_operator_mobile: شماره موبایل متصدی شعبه برای دریاف اس ام اس اتوماتیک
-        در هنگام رزرو بلیط توسط مسافران
+        در هنگام رزرو بلیت توسط مسافران
       title: درخواست حساب کاربری برای شعبه های شرکتهای مسافربری
     company_account_request_accept:
       company_account_request_sent: درخواست شما با موفقیت ارسال شد. در چند روز آینده
