add details column to user

--- a/config/locales/models/user/en.yml
+++ b/config/locales/models/user/en.yml
@@ -8,6 +8,7 @@ en:
         lastname: Last Name
         gender: Gender
         tel: Telphone
+        details: More details
         mobile: Cellphone
         address: Address
         age: Age
