--- a/config/locales/models/user/fa.yml
+++ b/config/locales/models/user/fa.yml
@@ -8,6 +8,7 @@ fa:
         lastname: نام خانوادگی
         gender: جنسیت
         tel: تلفن
+        details: اطلاعات بیشتر
         mobile: موبایل
         address: آدرس
         age: سن
