fix style of sidebar rows in profile

--- a/config/locales/general/en.yml
+++ b/config/locales/general/en.yml
@@ -24,6 +24,8 @@ en:
   gender:
     male: Male
     female: Female
+  has: "Yes"
+  dosnt_have: "No"   
   city: City
   at: At
   before: ‌‌Before 
